# bazel-orfs

./: BUILD  Dockerfile  MODULE.bazel  README.md  docker_shell.sh  openroad.bzl  orfs  rules.mk
.github/scripts/: build_L1MetadataArray.sh  build_tag_array.sh
.github/workflows/: ci.yml  ci_docker.yml
test/: constraints-sram.sdc
test/rtl/: L1MetadataArray_full.sv
